--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ before_script:
   - virtualenv venv
   - source venv/bin/activate
   - pip install numpy
+  - pip install -r requirements.txt
 
 test:
   script:
