--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,8 +29,8 @@ before_script:
 test:
   script:
     - python setup.py test
-    - pip install tox flake8  # you can also use tox
-    - tox -e py38,flake8
+#    - pip install tox flake8  # you can also use tox
+#    - tox -e py38,flake8
 
 run:
   script:
